--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,78 @@
 version: "3.9"
 services:
-  vuln-scanner:
-    build: ./vuln-scanner
+
+  db:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: example
+
+  adminer:
+    image: adminer
+    restart: always
+    expose:
+      - 6379
+
+  cve_search:
+    image: cve_search
+    build:
+      context: .
+      dockerfile: CVE-Search-Docker/docker/images/cve_search/dockerfile-cve_search
+      args:
+        - REPO=cve-search/cve-search
+        - BRANCH=master
+    hostname: cve_search
+    depends_on:
+      - redis
+      - mongo
+    restart: always
+    environment:
+      - PYTHONUNBUFFERED=TRUE
+      - WORKER_SIZE=1
+    expose:
+      - 5000
+    networks:
+      - backend
+
+  redis:
+    image: cve_search-redis
+    hostname: redis
+    restart: always
+    build:
+      context: .
+      dockerfile: CVE-Search-Docker/docker/images/redis/dockerfile-redis
+    volumes:
+      - "./CVE-Search-Docker/.cve_search_data/cve_search_redis:/data"
+    expose:
+      - 6379
+    networks:
+      - backend
+
+  mongo:
+    image: cve_search-mongo
+    hostname: mongo
+    restart: always
+    build:
+      context: .
+      dockerfile: CVE-Search-Docker/docker/images/mongodb/dockerfile-mongo
+    volumes:
+      - "./CVE-Search-Docker/.cve_search_data/cve_search_mongodb:/data/db"
+    expose:
+      - 27017
+    networks:
+      - backend
+
+  exploit-db:
+    image: princechrismc/go-exploitdb
+    hostname: exploitDB
+    port:
+      - 1326:1326
+    networks:
+      - frontend
+      - backend
+
+
+networks:
+  frontend:
+  backend:
